# src/controllers/province-controller.js
@@ -26,6 +26,33 @@ ProvinceRouter.get("/", async (req, res) => {   /*
 
 
 ProvinceRouter.get("/:id", async (req, res) => {
+      /*
+        #swagger.tags = ['Provincias']
+        #swagger.summary = 'Obtener una provincia por ID'
+        #swagger.description = 'Retorna una provincia específica utilizando su identificador.'
+
+        #swagger.parameters['id'] = {
+            in: 'path',
+            description: 'ID de la provincia que se desea consultar.',
+            required: true,
+            type: 'integer'
+        }
+
+        #swagger.responses[200] = {
+            description: 'Provincia encontrada correctamente.',
+            schema: {
+                $ref: '#/definitions/Province'
+            }
+        }
+
+        #swagger.responses[404] = {
+            description: 'Provincia no encontrada.'
+        }
+
+        #swagger.responses[500] = {
+            description: 'Error interno del servidor.'
+        }
+    */
     // req.params contiene los parámetros de la URL, en este caso el :id
     const { id } = req.params;
     const province = await service.getByIdAsync(id);
@@ -40,6 +67,36 @@ ProvinceRouter.get("/:id", async (req, res) => {
 
 
 ProvinceRouter.post("/", async (req, res) => {
+
+    /*
+        #swagger.tags = ['Provincias']
+        #swagger.summary = 'Crear una provincia'
+        #swagger.description = 'Crea una nueva provincia utilizando los datos enviados en el cuerpo de la solicitud.'
+
+        #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: '#/definitions/Province'
+                    }
+                }
+            }
+        }
+
+        #swagger.responses[201] = {
+            description: 'Provincia creada correctamente.'
+        }
+
+        #swagger.responses[400] = {
+            description: 'Datos incorrectos o error de validación.'
+        }
+
+        #swagger.responses[500] = {
+            description: 'Error interno del servidor.'
+        }
+    */
+
     try {
         const province = req.body;
         await service.createAsync(province);
@@ -51,6 +108,39 @@ ProvinceRouter.post("/", async (req, res) => {
 
 
 ProvinceRouter.put("/", async (req, res) => {
+
+    /*
+        #swagger.tags = ['Provincias']
+        #swagger.summary = 'Actualizar una provincia'
+        #swagger.description = 'Actualiza los datos de una provincia utilizando la información enviada en el cuerpo de la solicitud.'
+
+        #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: '#/definitions/Province'
+                    }
+                }
+            }
+        }
+
+        #swagger.responses[200] = {
+            description: 'Provincia actualizada correctamente.'
+        }
+
+        #swagger.responses[400] = {
+            description: 'Datos incorrectos o error de validación.'
+        }
+
+        #swagger.responses[404] = {
+            description: 'Provincia no encontrada.'
+        }
+
+        #swagger.responses[500] = {
+            description: 'Error interno del servidor.'
+        }
+    */
     try {
         const province = req.body;
         const updated = await service.updateAsync(province);
@@ -67,6 +157,31 @@ ProvinceRouter.put("/", async (req, res) => {
 
 
 ProvinceRouter.delete("/:id", async (req, res) => {
+
+     /*
+        #swagger.tags = ['Provincias']
+        #swagger.summary = 'Eliminar una provincia'
+        #swagger.description = 'Elimina una provincia utilizando su identificador.'
+
+        #swagger.parameters['id'] = {
+            in: 'path',
+            description: 'ID de la provincia que se desea eliminar.',
+            required: true,
+            type: 'integer'
+        }
+
+        #swagger.responses[200] = {
+            description: 'Provincia eliminada correctamente.'
+        }
+
+        #swagger.responses[404] = {
+            description: 'Provincia no encontrada.'
+        }
+
+        #swagger.responses[500] = {
+            description: 'Error interno del servidor.'
+        }
+    */
     const { id } = req.params;
     const deleted = await service.deleteAsync(id);
 
